--- a/MarvelCharacters/androidApp/src/main/AndroidManifest.xml
+++ b/MarvelCharacters/androidApp/src/main/AndroidManifest.xml
@@ -7,12 +7,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.error.ErrorActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.characters.CharactersActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
     </application>
-</manifest> 
+
+</manifest>
