--- a/MarvelCharacters/.gitignore
+++ b/MarvelCharacters/.gitignore
@@ -1,6 +1,7 @@
 *.iml
 .gradle
 /local.properties
+/gradle.properties
 .idea
 .DS_Store
 /build
@@ -9,3 +10,4 @@
 .externalNativeBuild
 .cxx
 local.properties
+gradle.properties
