--- a/MarvelCharacters/gradle.properties
+++ b/MarvelCharacters/gradle.properties
@@ -11,3 +11,6 @@ android.useAndroidX=true
 kotlin.mpp.enableGranularSourceSetsMetadata=true
 kotlin.native.enableDependencyPropagation=false
 kotlin.mpp.enableCInteropCommonization=true
+
+MARVEL_PUBLIC_KEY=a9be33b47e26823b8d568d3dc7304885
+MARVEL_PRIVATE_KEY=fefc7d32a444d01b973eac1be28f1fe893d1cd13
